--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section class="home" id="home">
 
         <div class="content">
-            <!-- <img src="/image/img-1.jpg" alt=""> -->
+            <img src="/image/img-1.jpg" alt="">
             <h3>Anirban Mahata</h3>
             <p>A front-end developer</p>
             <a href="Anirban_Resume.pdf" class="btn" target="_blank">View CV</a>
