--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header">
 
         <div class="user">
-            <img src="/image/img.jpg"
+            <img src="https://lh3.googleusercontent.com/84CmpBP8yxSXIV2hGFJnXSzq4Iwc34R5I-1ZY5KYSrC2OdanHJ7Tr34ROCgp-Ul2MzKKhqB_ZWUQAfz5OIj3aUUmgy-pXhrdR6LVmeT6FwEQE0-iyDjIqVsKgCCOKwThqH2cE2Uq5_BPZQjNsiCT6Edz7m6NoOlAOMbEB1I9OSeuONElkfsjgWhasYHeNHbqXeRqD_bvzPiBm2w_LBhnzrtooBbYDVUvq0WWeKKmI8D4GGFPhZ08spZm5sWUcHeE9q_AQk6m_N9wN8zhnrIRdWjKKYCpRLFU8Eepeo5qvy5Symw71rs-3lR_-osB3lmGBRohyk3sHhpM0oBImrEmnKVQWMIyuVOvFDiH0JQ_kYkaKrvx2jh8jX1dy0Bc90Fr_C0N56b7whF7BxGkidIq2WRhxr8dm-h4c23iF40FJ7Aq2qy6nELiKQBLDKKmNAh8JAf2LeGeFmFenKwTA21uM5iamXCIlz8_ZpEu7WcHyW8lKOInRoZtavq9JGngnSs2ayyjHljD1GIUYsYvNXGd4ilEndNYjWDQ1Wz6gxNdZeABcroPQyUyp2DokXR7OzZXLRNCqKz-W02i4c1VhBE-Ib46MHMo6ImXfwGaaCutQ0NI4ly0KQRfhU-7U5XAwbM8RL5vTANk2NatGzdhGt2Z9dn-7fH3fShIHQjGFNCt742yrYNsTYJOGUFD8bJ4c6CyB7umId4Dm6dRBiQ5hY54yHfi2AO6KVMmIgw7XkleY8qNDvrMvkjyfr0X3tiH4YkidV0eWw-3pKiXdajBVbA5mP9w91h-YZhzJEI1OeZJGtOZCX1ygYgOKnyCXZYeiATYnE-VrjZVVNrMxZaseSYddYiu-8PPAK6xamVqONsuHcyFunZB8UPDTXXglm5x0RGP8_9UrTdE4IZhnvDmDueHSuGWbBAUblNqb6TnI8Z3v3LD0g=s220-no?authuser=0"
                 alt="">
             <h3>Anirban Mahata</h3>
             <p>front-end developer</p>
